# swir

./: .dockerignore  .gitignore  .travis.yaml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.html  README.md  build.rs  build.sh  cargo-cmd.sh  cicd.sh  curl-commands.sh  curl_commands.sh  generate-cert.sh  kafka-commands.sh  kafka-create-topics.sh  make_release.sh  nats_commands.sh  rustfmt.toml  rustycar.sh  swir.yaml  swir_aws.yaml  swir_docker.yaml
clients/kafka-java-client/: .gitignore  Dockerfile  HELP.md  build.gradle  settings.gradle  start_test.sh
clients/performance-kafka-sink/: Dockerfile  settings.gradle
clients/swir-grpc-client/: .gitignore  build.gradle
clients/swir-grpc-sink/: build.gradle  settings.gradle
clients/swir-java-client/: .gitignore  Dockerfile  build.gradle  settings.gradle
clients/swir-kafka-sink/: Dockerfile  build.gradle  run_sink_docker.sh  run_sink_local.sh  settings.gradle
clients/swir-nats-sink/: Dockerfile  build.gradle  run_sink_local.sh  settings.gradle
docker/: Dockerfile_build_stage1  docker-compose-infr.yml  docker-compose-swir.yml  docker-compose.yml
docker/performance-framework/: cicd.sh  docker-compose-swir.yml  swir.yaml  swir_docker.yaml
docker/performance-framework/swir-grpc-client/: Dockerfile  build.gradle  standalone.sh
docker/performance-framework/swir-grpc-sink/: Dockerfile  build.gradle
docker/performance-framework/swir-kafka-sink/: Dockerfile
docker/performance-framework/swir-nats-sink/: Dockerfile
docker/solution-example/: cicd.sh  docker-compose-example-applications.yaml  docker-compose-example-sidecars.yaml
docker/solution-example-aws/: cicd.sh  cicd_aws.sh  cicd_aws_cleanup.sh  cicd_cleanup.sh  cicd_standalone.sh  cicd_standalone_cleanup.sh  cleanup.sh  docker-compose-example-applications.yaml  docker-compose-example-sidecars.yaml
docker/solution-example-aws-service-invocation/: cicd_aws.sh
docker/solution-example-aws-service-invocation/aws-scripts/: aws-clean-registry.sh  aws-create-deployment.py  aws-delete-role.sh  aws-populate-registry.sh  create-capacity-provider-template.yaml  create-cluster-template.yaml  swir-books-service-task-template.yaml  swir-library-service-task-template.yaml  swir-magazines-service-task-template.yaml
docker/solution-example-aws-service-invocation/swir-configurator/: swir_books_service.yaml  swir_magazines_service.yaml  swir_source.yaml
docker/solution-example-aws/aws-scripts/: aws-clean-registry.sh  aws-create-role.sh  aws-create-streams.sh  aws-delete-role.sh  aws-delete-streams.sh  aws-delete-table.sh  aws-kinesis-create-stream.sh  aws-kinesis-delete-stream.sh  aws-populate-registry.sh  create-auto-scaling-group-template.yaml  docker-compose-example-sidecars.yaml  swir-billing-processor-task-template.yaml  swir-inventory-processor-task-template.yaml  swir-order-generator-task-template.yaml  swir-order-processor-task-template.yaml  swir-shipment-sink-task-template.yaml
docker/solution-example-aws/swir-configurator/: Dockerfile  swir_billing_processor.yaml  swir_inventory_processor.yaml  swir_order_processor.yaml  swir_sink.yaml  swir_source.yaml
docker/solution-example-service-invocation/: cicd.sh  cicd_cleanup.sh  docker-compose-si-example-applications.yaml  docker-compose-si-example-sidecars.yaml
docker/solution-example-service-invocation/swir-configurator/: swir_books_service.yaml  swir_books_service_aws.yaml  swir_magazine_service.yaml  swir_magazines_service_aws.yaml  swir_source.yaml  swir_source_aws.yaml
docker/solution-example-service-invocation/swir-python-grpc-client/: Dockerfile  build.sh  client_api_pb2.py  client_api_pb2_grpc.py  swir-python-client.py
docker/solution-example-service-invocation/swir-python-http-server/: Dockerfile  server.py
docker/solution-example/swir-configurator/: swir_processor_1.yaml  swir_processor_2.yaml  swir_processor_3.yaml  swir_sink.yaml  swir_source.yaml
docker/solution-example/swir-java-processor/: Dockerfile  build.gradle
docker/solution-example/swir-java-source/: Dockerfile  build.gradle
docker/solution-example/swir-python-processor/: Dockerfile  build.sh  swir-python-processor.py
docker/solution-example/swir-python-sink/: Dockerfile  build.sh  client_api_pb2.py  client_api_pb2_grpc.py  swir-python-sink.py
graphics/: Diagram1.dia  example-aws-solution.drawio  example-solution-k8s.drawio  example-solution-sdi.drawio  example-solution.drawio  swir-architecture.drawio  swir_architecture.drawio  swir_logo.xcf  swir_logo_2.xcf  swir_logo_sidecar.xcf  swir_logo_sidecar_2.xcf
grpc_api/: client_api.proto  common_structs.proto  internal_api.proto  notification_api.proto
open_api/: README.md  client_api.json  client_api.yaml  service_invocation_api.yaml
src/: boxio.rs  cli.yml  main.rs
src/backend_handlers/: aws_kinesis_handler.rs  client_handler.rs  grpc_handler.rs  kafka_handler.rs  mod.rs  nats_handler.rs
src/frontend_handlers/: mod.rs
src/frontend_handlers/grpc_handler/: mod.rs
src/frontend_handlers/grpc_internal_handler/: mod.rs
src/grpc_handler/: mod.rs
src/handlers/: mod.rs  structs.rs
src/http_handler/: mod.rs
src/messaging_handlers/: aws_kinesis_handler.rs  client_handler.rs  kafka_handler.rs  mod.rs  nats_handler.rs  nats_wrapper.proto
src/persistence_handlers/: dynamodb_store.rs  mod.rs  redis_store.rs
src/service_discovery/: dynamodb_sd.rs  mdns_sd.rs  mod.rs
src/si_handlers/: mod.rs  si_http_handler.rs
src/utils/: command_utils.rs  config.rs  metric_utils.rs  mod.rs  pki_utils.rs  structs.rs  tracing_utils.rs
swir_in_action_examples/: README.md
swir_in_action_examples/docker/: .gitignore  Dockerfile_build_stage1
swir_in_action_examples/kubernetes/: check_env.sh  cicd.sh  jaeger-allinone.yaml  jaeger_install.sh  jaeger_uninstall.sh  minikube_init.sh  setup.sh  swir_operator_install.sh  swir_operator_remove.sh  tracing_dashboard.sh
web/: README.md  index.html  package-lock.json  package.json
web/css/: freelancer.css  freelancer.min.css
web/js/: contact_me.min.js  freelancer.min.js  jqBootstrapValidation.min.js
web/scss/base/: _variables.scss
(+249 files in other folders)
