[package]
name = "swir"
version = "0.3.0"
authors = ["Dawid Nowak <nowakd@gmail.com>"]
repository = "https://github.com/swir-rs/swir"
readme = "README.md"
license = "Apache-2.0"
description = "Sidecar Written in Rust"
keywords = ["sidecar", "rest", "messaging","cloudcomputing","kafka","nats","grpc"]
categories = ["sidecar","messaging","kafka","nats","grpc","cloudcomputing"]
edition = "2018"
publish = false

[[bin]]
name = "swir"
test = false
bench = false
path = "src/main.rs"

[dependencies]
bytes = "0.5"
futures = "0.3"
futures-util = "0.3"
env_logger = "0.7"
rand = "0.7"
base64 = "*"
multimap="0.8"
cfg-if = { version = "=0.1.10" }
custom_error= "1.7"
tokio = { version = "0.2", features = ["full","sync"]}
tokio-rustls = "0.13"
rustls = "0.17"
hyper = "0.13"
http = "0.2"
tower="0.3"
hostname= "0.3"
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_bytes = { version = "0.11"}
currenttimemillis = {version ="*", git = "https://github.com/swir-rs/currenttimemillis-rs"}
rdkafka = { version="0.23",features = ["default"] } 
rdkafka-sys = { version = "1.3", features = ["default"]} 
nats = {version="*",optional=true}
rusoto_kinesis="0.43"
rusoto_dynamodb="0.43"
rusoto_signature="0.43"
rusoto_core="0.43"
aws-lock-client = {version="*", git="https://github.com/swir-rs/aws-lock-client-rs"} 
regex ="*"
lazy_static="*"
async-trait="*"
tracing = "0.1.15"
tracing-subscriber = "0.2.4"
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.5.0"
opentelemetry = "0.6"
opentelemetry-jaeger = "0.5"
prost = "0.6"
#tonic = {version="0.2", optional=false, features=["default","tls"] }
tonic = {version="0.2", git ="https://github.com/hyperium/tonic", optional=false, branch = "master", features=["default","tls"] }
#tonic = {version="0.2", path="../tonic/tonic", optional=false, features=["default","tls"] }
config = { version="*", features = ["with_env_vars"],  git = "https://github.com/swir-rs/config-rs" }
redis = { version="0.15",features = ["cluster"]}

mdns-responder = {version="0.2", git = "https://github.com/swir-rs/rust-mdns"}

[build-dependencies]
tonic-build = "0.2"
#tonic-build = { version="0.2", git ="https://github.com/hyperium/tonic", branch = "master"  }
#tonic-build = { version="0.2", path="../tonic/tonic-build" }


[features]
with_nats = ["nats"]
