[package]
name = "swir"
version = "0.4.0"
authors = ["Dawid Nowak <nowakd@gmail.com>"]
repository = "https://github.com/swir-rs/swir"
readme = "README.md"
license = "Apache-2.0"
description = "Sidecar Written in Rust"
keywords = ["sidecar", "rest", "messaging","cloudcomputing","kafka","nats","grpc"]
categories = ["sidecar","messaging","kafka","nats","grpc","cloudcomputing"]
edition = "2018"
publish = false

[[bin]]
name = "swir"
test = false
bench = false
path = "src/main.rs"

[dependencies]
async-trait="*"
aws-lock-client = {version="*", git="https://github.com/swir-rs/aws-lock-client-rs"}

base64 = "*"
bytes = "1.0"

config = "*"
currenttimemillis = {version ="*", git = "https://github.com/swir-rs/currenttimemillis-rs"}
custom_error= "1.7"

env_logger = "0.8"

futures = "0.3"
futures-util = "0.3"

get_if_addrs = "0.5"

h2    = { version = "0.3.1" }
hostname= "0.3"
http = "0.2"
hyper = { version = "0.14.2", features = ["full"] }

mdns-responder = {version="0.2", git = "https://github.com/swir-rs/rust-mdns"}
multimap="0.8"

nats = {version="0.8",optional=true}
     
opentelemetry = { version = "0.13.0", features = ["rt-tokio","trace","serialize","metrics"]}

#, default-features = false, features = ["rt-tokio","trace","serialize"] }
opentelemetry-jaeger = "0.12"	        
opentelemetry-otlp = { version= "0.6", features=["default","metrics"]}
procinfo= "0.4"
prost = { version = "0.7" }
prost-derive = { version = "0.7" }

rand = "0.8"
rdkafka = { version="0.25",features = ["default"] } 
rdkafka-sys = { version = "3.0.0", features = ["default"]}
redis = { version="0.20",features = ["cluster"]}
rusoto_kinesis="0.46"
rusoto_dynamodb="0.46"
rusoto_signature="0.46"
rusoto_core="0.46"
rustls = "0.19"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11"}
serde_json = { version = "1.0" }

tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version= "0.1", features = ["net"]}
tokio-rustls = "0.22"
tokio-fs = "0.1.7"
tonic = {version="0.4",  features=["default","tls"] }
tower-layer = "0.3.1"
tower="0.4"
tracing = "0.1"
tracing-futures = "0.2.5"	
tracing-opentelemetry = {version = "0.12.0"}
tracing-subscriber = { version = "0.2.16"}


[build-dependencies]
prost-build = "0.7"
tonic-build = {version="0.4",  features = ["prost"]}

[features]
with_nats = ["nats"]
